# notify-redis

./: .gitignore  .travis.yml  Cargo.toml  Makefile  README.md  flake.nix  package.nix  test.sh
.github/workflows/: nix.yaml  release.yml  rust.yml
src/: lib.rs  main.rs
tests/: tests.rs
