[package]
name = "notify-redis"
version = "0.1.0"
authors = ["Robin Appelman <robin@icewind.nl>"]
edition = "2018"

[dependencies]
notify = "4.0"
redis = "0.20"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
color-eyre = "0.5"

[dev-dependencies]
rand = "0.8.3"
tempfile = "3"