[package]
name = "notify-redis"
version = "0.1.0"
authors = ["Robin Appelman <robin@icewind.nl>"]
edition = "2018"

[dependencies]
notify = "6.0"
notify-debouncer-full = "0.2.0"
redis = { version = "0.23", default-features = false }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
color-eyre = "0.6"
clap = { version = "4.3.9", features = ["derive"] }

[dev-dependencies]
rand = "0.8.5"
tempfile = "3"

[profile.release]
lto = true
